--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "@react-native-community/async-storage": "^1.3.4",
     "react": "16.8.3",
     "react-native": "0.59.5",
-    "react-native-router-flux": "^4.0.6"
+    "react-native-gesture-handler": "^1.2.1",
+    "react-native-nfc-manager": "^1.2.2",
+    "react-native-router-flux": "^4.0.6",
+    "react-native-vector-icons": "^6.4.2",
+    "react-navigation": "^3.9.2"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
