--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,6 +138,7 @@ android {
 }
 
 dependencies {
+    implementation project(':lottie-react-native')
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-nfc-manager')
     implementation project(':react-native-gesture-handler')
