--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.3.4",
+    "lottie-react-native": "^2.6.1",
     "moment": "^2.24.0",
     "react": "16.8.3",
     "react-moment": "^0.9.2",
     "react-native": "0.59.5",
+    "react-native-animated-loader": "0.0.7",
     "react-native-gesture-handler": "^1.2.1",
     "react-native-nfc-manager": "^1.2.2",
     "react-native-router-flux": "^4.0.6",
